Fixed spacing styling in footer

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -289,11 +289,11 @@ section.home {
 aside.home {
 	background-color: whitesmoke;
 	margin: 3rem 1rem 3rem 1rem;
-	width: 300px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	height: fit-content;
+	padding: 1rem;
 }
 
 .home .title {
@@ -306,6 +306,7 @@ aside div {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
+	width: 100%;
 }
 
 a.button {
@@ -316,9 +317,8 @@ a.button {
 	border-radius: 5px;
 	align-items: center;
 	text-decoration: none;
-	color: inherit;
 	font-weight: 600;
-	color: rgb(8, 54, 73)
+	color: rgb(8, 54, 73);
 }
 
 aside div h4 {
@@ -457,6 +457,7 @@ input.radio-input {
 	border-radius: 5px;
 	padding: 1rem;
 	margin: 0.5rem;
+	line-height: 1.2rem;
 }
 
 .service h3 {
@@ -475,6 +476,7 @@ input.radio-input {
 #emergency h4 {
 	text-decoration: underline;
 	font-size: 24px;
+	margin-bottom: 1rem;
 }
 
 div.buttons {
@@ -484,6 +486,7 @@ div.buttons {
 
 .buttons .button {
 	width: 250px;
+	height: 70px;
 	margin: 1rem;
 }
 
@@ -622,7 +625,7 @@ footer {
 footer div h4 {
 	text-decoration: underline;
 	font-size: larger;
-	margin: 0.5rem 0.5rem 0.1rem 0.5rem;
+	margin: 0.5rem 0.5rem 0.1rem 0rem;
 }
 
 footer a {
@@ -632,6 +635,10 @@ footer a {
 .attributions {
 	width: 20%;
 	font-size: 0.7rem;
+}
+
+.attributions p {
+	margin-bottom: 1rem;
 }
 
 /* MEDIA QUERIES **************************************************/
